<resources>
    <string name="app_name">Chatter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_loggin_in">LogginIn</string>
    <string name="title_activity_add_friend">AddFriend</string>
    <string name="title_activity_performing_message">PerformingMessage</string>
    <string name="Message">Messages</string>
    <string name="Send">Send</string>
    <string name="title_activity_signing_up">SigningUp</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="confirmPassword">confirm password</string>
    <string name="Email">email</string>
    <string name="signUp">sign up</string>
    <string name="title_activity_list_friend_screen">ListFriendScreen</string>
</resources>
